# m5squared

./: .clang-format  .env.example  .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  demo_core.py  demo_integrated.py  generate_all.bat  generate_all.sh  launch.py  m25_analyzer.py  m25_ble.py  m25_bluetooth.py  m25_bluetooth_ble.py  m25_bluetooth_windows.py  m25_bluetooth_winrt.py  m25_config.py  m25_crypto.py  m25_decrypt.py  m25_ecs.py  m25_ecs_driveprofiles.py  m25_encrypt.py  m25_gui.py  m25_parking.py  m25_protocol.py  m25_protocol_data.py  m25_qr_to_key.py  m25_spp.py  m25_transport.py  m25_utils.py  mypy.ini  pyproject.toml  requirements.txt  setup-linux.sh  setup-windows.bat  setup-windows.ps1  start.bat  start.sh  test_integration.py  (+1 more)
.github/instructions/: code_generation.instructions.md  commit_instructions.instructions.md
core/: README.md  __init__.py  interfaces.py  mapper.py  supervisor.py  types.py
core/transport/: __init__.py  bluetooth.py  mock.py
demos/: demo_ble_notifications.py  demo_core.py  demo_gamepad.py  demo_gamepad_live.py  demo_integrated.py  test_gamepad_raw.py
doc/: ble-cross-platform.md  ble-notifications-how-it-works.md  ble-windows.md  esp32-python-integration.md  esp32-remote-design-spec.md  esp32-setup.md  m25-protocol.md  remote-control-design.md  usage-setup.md  windows-quickref.md  windows-setup.md
esp32/: README.md  ROADMAP.md  config.py
esp32/arduino/: README.md
esp32/examples/: basic_joystick.py
esp32/micropython/: README.md  config.py  m25_ble.py  m25_crypto.py  main.py
esp32/test/: test_mapper.cpp  test_supervisor.cpp
gui/: __init__.py  app.py  theme.py  transport.py  widgets.py
input/: __init__.py  gamepad_input.py  mock_input.py
mock_wheel/: README.md  bluetooth_server.py  demo_mock_control.py  mock_wheel_simulator.py  test_bluetooth.py  test_mock_wheel.py
tests/: __init__.py  test_ble_notifications.py  test_mapper.py  test_types.py
tools/: README.md  compare_spp_tx.py  generate_constants.py  generate_profiles.py  generate_tests.py
(+75 files in other folders)
