[project]
name = "m5squared"
version = "0.1.0"
description = "M25 wheelchair drive toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0-or-later"
dependencies = [
    "pycryptodome>=3.15.0",
    "python-dotenv>=1.0.0",
    "bleak>=0.21.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
windows = [
    "winrt-Windows.Devices.Bluetooth>=2.0.0",
    "winrt-Windows.Devices.Bluetooth.Rfcomm>=2.0.0",
    "winrt-Windows.Networking>=2.0.0",
    "winrt-Windows.Networking.Sockets>=2.0.0",
    "winrt-Windows.Storage.Streams>=2.0.0",
]
linux = [
    "pybluez2",
]
dev = [
    "pytest>=7.0.0",
]
gui = [
    # tkinter is included with Python on most systems
    # On Linux, install: python3-tk (Debian/Ubuntu) or python3-tkinter (Fedora/RHEL)
]

[tool.setuptools]
py-modules = [
    "m25_analyzer",
    "m25_bluetooth",
    "m25_crypto",
    "m25_decrypt",
    "m25_ecs",
    "m25_ecs_driveprofiles",
    "m25_encrypt",
    "m25_parking",
    "m25_protocol",
    "m25_protocol_data",
    "m25_qr_to_key",
    "m25_spp",
    "m25_utils",
]

[project.urls]
Repository = "https://github.com/roll2own/m5squared"
Documentation = "https://github.com/roll2own/m5squared/tree/main/doc"

[project.scripts]
m25-ecs = "m25_ecs:main"
m25-qr-to-key = "m25_qr_to_key:main"
m25-decrypt = "m25_decrypt:main"
m25-encrypt = "m25_encrypt:main"
m25-analyzer = "m25_analyzer:main"
m25-bluetooth = "m25_bluetooth:main"
m25-parking = "m25_parking:main"
m25-gui = "m25_gui:main"
m25-config = "m25_config:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "m25_analyzer",
  "m25_bluetooth",
  "m25_bluetooth_windows",
  "m25_config",
  "m25_crypto",
  "m25_decrypt",
  "m25_ecs",
  "m25_ecs_driveprofiles",
  "m25_encrypt",
  "m25_gui",
  "m25_parking",
  "m25_protocol",
  "m25_protocol_data",
  "m25_qr_to_key",
  "m25_spp",
  "m25_utils",
]
